@@ -2,6 +2,7 @@
 Version: 2.1.6
 Date: ????
   Changes:
+    - update ore processing tech tiers #24
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.5
 Date: 2022-10-06
